Teste de Cadastro de Pacientes implementado